--- a/app/src/main/res/layout/song_list_item.xml
+++ b/app/src/main/res/layout/song_list_item.xml
@@ -2,9 +2,10 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/song_list_item_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="4dp"
     app:cardCornerRadius="4dp">
 
     <LinearLayout
@@ -14,16 +15,14 @@
         android:orientation="horizontal">
 
         <View
-            android:id="@+id/side_color"
             android:layout_width="15dp"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary" />
+            android:background="@color/colorPrimary"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <TextView
                 android:id="@+id/song_title"
                 android:layout_width="match_parent"
@@ -49,8 +48,10 @@
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/view"
                 app:layout_constraintTop_toBottomOf="@+id/song_title" />
+
         </LinearLayout>
 
-    </LinearLayout>
 
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
