--- a/app/src/main/res/layout/song_list_item_header.xml
+++ b/app/src/main/res/layout/song_list_item_header.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/song_list_item_root"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="70dp"
     android:layout_margin="4dp"
     app:cardCornerRadius="4dp">
 
@@ -24,8 +24,10 @@
         <TextView
             android:id="@+id/song_title"
             android:layout_width="350dp"
-            android:layout_height="30dp"
-            android:textSize="16sp"
+            android:layout_height="35dp"
+            android:textSize="32sp"
+            android:layout_marginStart="8dp"
+            android:gravity="center_vertical"
             app:layout_constraintBottom_toTopOf="@+id/singer"
             app:layout_constraintEnd_toStartOf="@+id/image_is_expand_arrow"
             app:layout_constraintHorizontal_bias="0.017"
@@ -36,8 +38,10 @@
         <TextView
             android:id="@+id/singer"
             android:layout_width="350dp"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             android:textSize="16sp"
+            android:gravity="center_vertical"
+            android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/image_is_expand_arrow"
             app:layout_constraintHorizontal_bias="0.017"
@@ -52,7 +56,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.722"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.555" />
+            app:layout_constraintVertical_bias="0.555"
+            android:contentDescription="@string/text_image_is_expand" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
