--- a/app/src/main/res/layout/song_list_item_body.xml
+++ b/app/src/main/res/layout/song_list_item_body.xml
@@ -2,7 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
+    android:background="@color/secondaryDark">
 
     <TextView
         android:id="@+id/songs_key"
@@ -11,6 +14,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="8dp"
         android:textSize="20sp"
+        android:textColor="@color/secondaryTextIcon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,6 +25,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="8dp"
         android:textSize="20sp"
+        android:textColor="@color/secondaryTextIcon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/songs_key" />
 
