--- a/app/src/main/res/layout/song_list_item_header.xml
+++ b/app/src/main/res/layout/song_list_item_header.xml
@@ -1,63 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/song_list_item_root"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="4dp">
+    android:layout_marginStart="4dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginEnd="4dp"
+    android:background="@color/secondaryDark">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/song_title"
+        android:layout_width="350dp"
+        android:layout_height="35dp"
+        android:gravity="center_vertical"
+        android:paddingStart="8dp"
+        android:textColor="@color/primaryText"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/singer"
+        app:layout_constraintEnd_toStartOf="@+id/image_is_expand_arrow"
+        app:layout_constraintHorizontal_bias="0.017"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/singer"
+        android:layout_width="350dp"
+        android:layout_height="35dp"
+        android:gravity="center_vertical"
+        android:paddingStart="8dp"
+        android:textColor="@color/secondaryTextIcon"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/image_is_expand_arrow"
+        app:layout_constraintHorizontal_bias="0.017"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <View
-            android:id="@+id/side_color_bar"
-            android:layout_width="15dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/image_is_expand_arrow"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/text_image_is_expand"
+        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.722"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.555" />
 
-        <TextView
-            android:id="@+id/song_title"
-            android:layout_width="350dp"
-            android:layout_height="35dp"
-            android:textSize="32sp"
-            android:layout_marginStart="8dp"
-            android:gravity="center_vertical"
-            app:layout_constraintBottom_toTopOf="@+id/singer"
-            app:layout_constraintEnd_toStartOf="@+id/image_is_expand_arrow"
-            app:layout_constraintHorizontal_bias="0.017"
-            app:layout_constraintStart_toEndOf="@+id/side_color_bar"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <TextView
-            android:id="@+id/singer"
-            android:layout_width="350dp"
-            android:layout_height="35dp"
-            android:textSize="20sp"
-            android:gravity="center_vertical"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/image_is_expand_arrow"
-            app:layout_constraintHorizontal_bias="0.017"
-            app:layout_constraintStart_toEndOf="@+id/side_color_bar" />
-
-        <ImageView
-            android:id="@+id/image_is_expand_arrow"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.722"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.555"
-            android:contentDescription="@string/text_image_is_expand" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
