--- a/app/src/main/res/layout/song_list_item_body.xml
+++ b/app/src/main/res/layout/song_list_item_body.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="23dp"
+        android:layout_marginEnd="23dp"
         android:layout_marginTop="8dp"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="23dp"
+        android:layout_marginEnd="23dp"
         android:layout_marginTop="8dp"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
