--- a/app/src/main/res/layout/song_list_item_header.xml
+++ b/app/src/main/res/layout/song_list_item_header.xml
@@ -5,9 +5,9 @@
     android:id="@+id/song_list_item_root"
     android:layout_width="match_parent"
     android:layout_height="90dp"
-    android:layout_marginStart="4dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="4dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="5dp"
     android:backgroundTint="@color/thirdDark">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +24,6 @@
             android:textColor="@color/primaryText"
             android:textSize="32sp"
             app:layout_constraintBottom_toTopOf="@+id/singer"
-            app:layout_constraintEnd_toStartOf="@+id/image_is_expand_arrow"
             app:layout_constraintHorizontal_bias="0.017"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -40,12 +39,12 @@
             android:textColor="@color/secondaryTextIcon"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/image_is_expand_arrow"
+            app:layout_constraintEnd_toStartOf="@+id/button_edit"
             app:layout_constraintHorizontal_bias="0.017"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
-            android:id="@+id/image_is_expand_arrow"
+            android:id="@+id/button_edit"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/thirdDark"
