--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#BB86FC</color>
     <color name="colorPrimaryVariant">#3700B3</color>
     <color name="colorSecondary">#03DAC6</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#2E8857</color>
     <color name="white">#FFFFFF</color>
     <color name="primaryText">#EFEFEF</color>
     <color name="thirdTextIcon">#8E8E8E</color>
