--- a/app/src/main/res/layout/song_list_fragment.xml
+++ b/app/src/main/res/layout/song_list_fragment.xml
@@ -8,37 +8,23 @@
     android:background="@color/primaryDark"
     tools:context=".ui.songlist.SongListFragment">
 
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="16dp"
-        android:layout_marginStart="288dp"
-        android:text="@string/sorted_by"
-        android:textColor="@color/primaryText"
-        android:textSize="12sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_song_list_option"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <com.jaredrummler.materialspinner.MaterialSpinner
-        android:id="@+id/sort_option"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:textColor="@color/primaryText"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:ms_background_color="@color/primaryDark" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_song_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="64dp"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view_song_list_option" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add_new_song"
