--- a/app/src/main/res/layout/song_list_fragment.xml
+++ b/app/src/main/res/layout/song_list_fragment.xml
@@ -13,19 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="16dp"
-        app:floatingSearch_searchHint="Search..."
-        app:floatingSearch_suggestionsListAnimDuration="250"
-        app:floatingSearch_showSearchKey="false"
-        app:floatingSearch_leftActionMode="showHamburger"
+        app:floatingSearch_close_search_on_keyboard_dismiss="true"
+        app:floatingSearch_leftActionMode="showSearch"
         app:floatingSearch_menu="@menu/search"
-        app:floatingSearch_close_search_on_keyboard_dismiss="true"/>
+        app:floatingSearch_searchHint="Search..."
+        app:floatingSearch_showSearchKey="false"
+        app:floatingSearch_suggestionsListAnimDuration="250" />
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_song_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:layout_marginTop="?attr/actionBarSize"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toTopOf="@+id/floating_search_view"
+        tools:layout_editor_absoluteX="3dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add_new_song"
@@ -38,6 +41,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
-    
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
