change ui-layer to feature module

--- a/songlist/src/main/res/layout/song_list_fragment.xml
+++ b/songlist/src/main/res/layout/song_list_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primaryDark"
-    tools:context=".ui.songlist.SongListFragment">
+    tools:context=".feature.songlist.SongListFragment">
 
     <com.arlib.floatingsearchview.FloatingSearchView
         android:id="@+id/floating_search_view"
