--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/songListFragment"
-        android:name="me.index197511.mysongbank.ui.songlist.SongListFragment"
+        android:name="me.index197511.mysongbank.feature.songlist.SongListFragment"
         android:label="song_list_fragment"
         tools:layout="@layout/song_list_fragment">
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/editSongFragment"
-        android:name="me.index197511.mysongbank.ui.editsong.EditSongFragment"
+        android:name="me.index197511.mysongbank.feature.editsong.EditSongFragment"
         android:label="edit_song_fragment"
         tools:layout="@layout/edit_song_fragment">
 
