--- a/editsong/src/main/res/layout/edit_song_fragment.xml
+++ b/editsong/src/main/res/layout/edit_song_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/thirdDark"
-    tools:context=".ui.editsong.EditSongFragment">
+    tools:context="me.index197511.mysongbank.feature.editsong.EditSongFragment">
 
     <TextView
         android:id="@+id/text_view_name_header"
