--- a/editsong/src/main/res/navigation/nav_graph.xml
+++ b/editsong/src/main/res/navigation/nav_graph.xml
@@ -2,17 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@id/songListFragment">
-
-    <fragment
-        android:id="@+id/songListFragment"
-        android:name="me.index197511.mysongbank.feature.songlist.SongListFragment"
-        android:label="song_list_fragment"
-        tools:layout="@layout/song_list_fragment">
-        <action
-            android:id="@+id/action_songListFragment_to_editSongFragment"
-            app:destination="@id/editSongFragment" />
-    </fragment>
+    tools:ignore="UnusedNavigation">
     <fragment
         android:id="@+id/editSongFragment"
         android:name="me.index197511.mysongbank.feature.editsong.EditSongFragment"
@@ -22,8 +12,5 @@
         <argument
             android:name="song"
             app:argType="me.index197511.mysongbank.model.Song" />
-        <action
-            android:id="@+id/action_editSongFragment_to_songListFragment"
-            app:destination="@id/songListFragment" />
     </fragment>
 </navigation>
